fix(#221): adjust link padding to prevent overflow

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -20,11 +20,7 @@
   }
 
   &-reduced {
-    height: 130px;
-
-    @media (max-width: breakpoints.$sm) and (orientation: landscape) {
-      height: 110px;
-    }
+    height: 110px;
 
     @media (max-width: breakpoints.$xsm) {
       height: auto;
@@ -270,7 +266,7 @@
   }
 
   &-postheader {
-    height: 80px;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -293,7 +289,7 @@
       display: flex;
       gap: 88px;
       font-size: 20px;
-      padding: 10px 10px 5px 0;
+      padding: 5px 10px 5px 0;
 
       @media (max-width: breakpoints.$sm) {
         gap: 32px;
